manifests/blue-green-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: blue-green-ns
  annotations:
    linkerd.io/inject: enabled
