manifests/canary-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: canary-ns
  annotations:
    linkerd.io/inject: enabled
