manifests/rollout-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rollout-ns
  annotations:
    linkerd.io/inject: enabled
