manifests/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-backend
  template:
    metadata:
      labels:
        app: vote-backend
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: vote-backend
        image: redis
        ports:
        - containerPort: 6379
          name: redis
