manifests/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote-frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: vote-frontend
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: vote-frontend
        image: !IMAGE!
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
