manifests/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vote-backend
spec:
  ports:
  - port: 6379
  selector:
    app: vote-backend
