manifests/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vote-frontend
spec:
  ports:
  - port: 80
  selector:
    app: vote-frontend
